WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85346
EventSource: Events should not be dispatched after close()
https://bugs.webkit.org/show_bug.cgi?id=85346
Summary
EventSource: Events should not be dispatched after close()
Yuta Kitamura
Reported
2012-05-01 21:58:40 PDT
Original report:
http://code.google.com/p/chromium/issues/detail?id=125190
Reported by VMuhachev, Apr 26 (5 days ago) After EventSource#close() method is called, no events should be fired and readyState attribute should stay equal to EventSource.CLOSED See:
http://html5.org/tools/web-apps-tracker?from=6771&to=6772
,
https://www.w3.org/Bugs/Public/show_bug.cgi?id=14331#c5
event-stream: :text/event-stream data: data0; data: data1; var es = new EventSource('...'); var counter = 0; es.onmessage = function () { counter += 1; if (counter > 1) { alert('bug!'); } es.close(); };
Attachments
Patch
(4.60 KB, patch)
2012-05-11 14:58 PDT
,
Pablo Flouret
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pablo Flouret
Comment 1
2012-05-11 14:58:44 PDT
Created
attachment 141501
[details]
Patch
Pablo Flouret
Comment 2
2012-06-11 15:00:42 PDT
Ping?
WebKit Review Bot
Comment 3
2012-06-25 17:00:13 PDT
Comment on
attachment 141501
[details]
Patch Clearing flags on attachment: 141501 Committed
r121195
: <
http://trac.webkit.org/changeset/121195
>
WebKit Review Bot
Comment 4
2012-06-25 17:00:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug