EventSource: Events should not be dispatched after close() https://bugs.webkit.org/show_bug.cgi?id=85346

Patch by Pablo Flouret <pablof@motorola.com> on 2012-06-25
Reviewed by Adam Barth.

Source/WebCore:

Spec changed to make sure that no events are dispatched after close() is
called, even if more data was received before the call to close().

See,
https://www.w3.org/Bugs/Public/show_bug.cgi?id=14331#c5
http://html5.org/tools/web-apps-tracker?from=6771&to=6772

Firefox behaves like this already.

Test: http/tests/eventsource/eventsource-events-after-close.html

* page/EventSource.cpp:
(WebCore::EventSource::parseEventStream):

LayoutTests:

* http/tests/eventsource/eventsource-events-after-close-expected.txt: Added.
* http/tests/eventsource/eventsource-events-after-close.html: Added.

Canonical link: https://commits.webkit.org/107767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121195 268f45cc-cd09-0410-ab3c-d52691b4dbfc